# tarrasque

./: Cargo.toml  README.md
src/: main.rs
src/cql/: codec.rs  header.rs  mod.rs  operation.rs
src/cql/request/: mod.rs  query.rs  startup.rs
src/cql/response/: error.rs  mod.rs  result.rs  supported.rs
src/db/: builtins.rs  data.rs  dialect.rs  error.rs  execution.rs  mod.rs  parse.rs  schema.rs  visitor.rs
src/serde/: reader.rs  writer.rs
src/server/: cql.rs
