[package]
name = "tarrasque"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec", "compat"] }
bytes = "1.9.0"
tokio-macros = "2.4.0"
futures = "0.3.31"
sqlparser = { version = "0.53.0", features = ["visitor"] }
redb = "2.4.0"
num-traits = "0.2.19"
bitreader = "0.3.11"
uuid = "1.13.1"
sled = "0.34.7"
bitflags = "2.8.0"
