[package]
name = "tarrasque"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec", "compat"] }
bytes = "1.9.0"
tokio-macros = "2.4.0"
futures = "0.3.31"
sqlparser = { version = "0.53.0", features = ["visitor"] }
num-traits = "0.2.19"
bitreader = "0.3.11"
uuid = { version = "1.13.1", features = ["v4"] }
bitflags = "2.8.0"
fjall = "2.6.5"
indexmap = "2.7.1"
tempfile = "3.17.1"
tokio-test = "0.4.4"
